[package]
name = "data-structs"
description = "Implementations of basic data structures"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/boranseckin/data-structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
